--- a/helloworld.html
+++ b/helloworld.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<h2>This is a the second change done within Visual Code</h2>
+<h2>Story is now connected to a Feature</h2>
 <h3> This is another test</h3>
 <h4>Next level</h4>
 <h5>test</h5>
