--- a/helloworld.html
+++ b/helloworld.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Hello World</title>
+</head>
 <body>
-<h1>Hello World</h1>
-<h2>Story is now connected to a Feature</h2>
-<h3> This is another test</h3>
-<h4>Next level</h4>
-<h5>test</h5>
-<b><i>I am now adding some body text</i></b>
+  <h1>Hello World</h1>
+  <h2>Story is now connected to a Feature</h2>
+  <h3> This is another test</h3>
+  <h4>Next level</h4>
+  <h5>test</h5>
+  <b><i>I am now adding some body text</i></b>
 </body>
 </html>
